<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="17dp"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/new_music"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/personal_music"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/upload_file"
            android:id="@+id/upload_music"
            android:gravity="center" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="382dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:src="@drawable/upload" />

</LinearLayout>